# vox

./: README.md  justfile  pyproject.toml
client/: package-lock.json  package.json
src/: app.py  main.py
src/config/: settings.py
src/core/listener/: api.py
src/core/system/: clipboard.py  recording.py  tray.py
src/core/transcribe/: transcribe.py
tests/transcribe/: test_transcribe.py
