[project]
name = "vox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyaudio>=0.2.14",
    "pynput>=1.8.1",
    "torch==1.10.0+cu102",
    "torchaudio==0.10.0+cu102",
    "whisperx>=3.3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
